@@ -333,13 +333,13 @@ CIAO::DDS4CCM::RTI::Reader_T<DDS_TYPE, CCM_TYPE>::filter (
           throw CCM_DDS::InternalError (::DDS::RETCODE_ERROR, 2);
         }
 
-      const char* paramaterlist[filter.query_parameters.length ()];
+      const char* parameterlist[filter.query_parameters.length ()];
       for (CORBA::ULong i = 0; i < filter.query_parameters.length (); ++i)
         {
-          paramaterlist[i] = filter.query_parameters[i].in ();
+          parameterlist[i] = filter.query_parameters[i].in ();
         }
       DDS_StringSeq parameters (filter.query_parameters.length ());
-      parameters.from_array(paramaterlist, filter.query_parameters.length ());
+      parameters.from_array(parameterlist, filter.query_parameters.length ());
 
       this->cft_ = dp->create_contentfilteredtopic (
                                     "ActFunny",
