@@ -1,3 +1,9 @@
+Thu Jan 14 19:13:52 UTC 2010  Marcel Smit  <msmit@remedy.nl>
+
+        * connectors/dds4ccm/impl/ndds/DomainParticipant.cpp:
+        * connectors/dds4ccm/impl/ndds/Reader_T.cpp:
+          Changed variable name.
+
 Thu Jan 14 15:54:10 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * connectors/dds4ccm/impl/ndds/DomainParticipant.cpp:
